# DataProfiler

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
app/: main.py
examples/: generate_test_data.py  sample.csv  test_dataset.csv
profiler/analyzers/: completeness.py  duplicates.py  file_info.py  memory.py  missing.py  preview.py  schema.py  shape.py  unique.py
profiler/config/: profile_config.py
profiler/engine/: profiler_engine.py
profiler/exceptions/: exceptions.py
profiler/exporters/: html.py  json.py  markdown.py  pdf.py
profiler/models/: dataset.py  datasource.py  file_info.py  profile.py
profiler/preprocessing/: __init__.py  auto.py  base.py  cleaners.py  encoders.py  imputers.py  outliers.py  scalers.py
profiler/quality/: duplicates.py  foreign_key.py  mixed_types.py  outliers.py  primary_key.py  scoring.py
profiler/readers/: base_reader.py  csv_reader.py  excel_reader.py  factory.py
profiler/relationships/: detector.py
profiler/report/: console_reporter.py  formatter.py  html_reporter.py  json_reporter.py  markdown_reporter.py  pdf_reporter.py
profiler/statistics/: boolean.py  categorical.py  datetime.py  numeric.py
profiler/utils/: logger.py  size_formatter.py
profiler/visualization/: boxplot.py  correlation.py  distribution.py  histogram.py  missing.py
streamlit_app/: app.py
tests/: test_app.py  test_preprocessing.py
